objects/orders__c.object
<CustomObject>
    <fields>
        <fullName>ADVANCE_AMOUNT__c</fullName>
        <label>ADVANCE_AMOUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGENT_CODE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>agents</label>
        <referenceTo>agents__c</referenceTo>
        <relationshipLabel>orders</relationshipLabel>
        <relationshipName>orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_CODE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>customer</label>
        <referenceTo>customer__c</referenceTo>
        <relationshipLabel>orders</relationshipLabel>
        <relationshipName>orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORD_AMOUNT__c</fullName>
        <label>ORD_AMOUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_DATE__c</fullName>
        <label>ORD_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORD_NUM__c</fullName>
        <displayFormat>Order-{0000}</displayFormat>
        <label>ORD_NUM</label>
        <type>AutoNumber</type>
    </fields>
    <label>orders</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ORD_DESCRIPTION</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>